fixed text overflow issues

--- a/react-app/src/components/EventByCategory/eventByCategory.css
+++ b/react-app/src/components/EventByCategory/eventByCategory.css
@@ -1,3 +1,12 @@
 a:active{
     text-decoration: underline;
 }
+
+.category-event-description{
+    color: #000000;
+    height: 25px;
+    width: 275px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
