--- a/react-app/src/components/SingleEvent/singleEvent.css
+++ b/react-app/src/components/SingleEvent/singleEvent.css
@@ -127,7 +127,7 @@
     word-wrap: break-word;
     font-family: 'Montserrat', sans-serif;
     overflow-y: scroll;
-    height: 175px;
+    height: 150px;
 }
 
 .single-event-date{
